# Multi-Agent-Job-Application-Copilot

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
agents/: document_tailor.py  executor.py  job_discovery.py  job_normalizer.py  orchestrator.py  reporter.py  resume_analyst.py  scoring.py
agents/prompts/: doc_tailor.md  resume_analyst.md  scoring.md
apps/api/: deps.py  main.py
apps/api/routers/: __init__.py  applications.py  auth.py  docs.py  jobs.py  llm.py  profile.py  reports.py
apps/ui/: streamlit_app.py
backend/: agent.py  auth.py  claude_session.py  config.py  database.py  llm_provider.py  main.py  models.py
backend/scrapers/: base.py  indeed.py  irantalent.py  jobinja.py  jobspy_scraper.py  jobvision.py  linkedin.py  remotive.py  wellfound.py  weworkremotely.py
backend/tools/: auto_apply.py  job_scorer.py  job_scraper.py  query_builder.py  report_generator.py  resume_parser.py
connectors/: base.py  greenhouse.py  lever.py  linkedin_stub.py  local_internal_stub.py  remoteok.py  weworkremotely.py
core/: config.py  security.py
core/utils/: text.py
db/: models.py  session.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  AuthContext.jsx  api.js  index.css  main.jsx
schemas/: application.py  candidate.py  job.py  report.py
services/: auth.py  email.py  embedding.py  llm.py  storage.py
tests/: test_api_smoke.py  test_connectors.py  test_schemas.py  test_scoring.py
tools/playwright/: browser.py  extractors.py  screenshots.py
(+11 files in other folders)
