[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mjajc"
version = "0.1.0"
description = "Multi-Agent Job Application Copilot"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "python-multipart>=0.0.9",
  "pydantic>=2.8",
  "pydantic-settings>=2.3",
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.2",
  "requests>=2.32",
  "feedparser>=6.0",
  "python-dateutil>=2.9",
  "streamlit>=1.37",
  "langgraph>=0.2",
  "pdfplumber>=0.11",
  "python-docx>=1.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.2", "httpx>=0.27", "ruff>=0.5", "mypy>=1.11"]

[tool.setuptools]
packages = ["apps", "core", "db", "schemas", "agents", "connectors", "tools", "services"]

[tool.pytest.ini_options]
pythonpath = ["."]
